--- a/src/AnyStatus/Features/ToolWindow/ToolWindowControl.xaml
+++ b/src/AnyStatus/Features/ToolWindow/ToolWindowControl.xaml
@@ -35,7 +35,7 @@
 
             <TreeView.ContextMenu>
                 <ContextMenu>
-                    
+
                     <MenuItem Header=" Refresh" 
                                           Command="{Binding Path=PlacementTarget.Tag.DataContext.RefreshItemCommand, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ContextMenu}}"
                                           CommandParameter="{Binding RootItem}">
@@ -45,21 +45,21 @@
                     </MenuItem>
 
                     <Separator />
-                    
+
                     <MenuItem Header=" New Item..." 
                               Command="{Binding Path=PlacementTarget.Tag.DataContext.AddItemCommand, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ContextMenu}}">
                         <MenuItem.Icon>
                             <imaging:CrispImage Width="16" Height="16" Moniker="{x:Static catalog:KnownMonikers.NewItem}" />
                         </MenuItem.Icon>
                     </MenuItem>
-                    
+
                     <MenuItem Header=" New Folder" 
                               Command="{Binding Path=PlacementTarget.Tag.DataContext.AddFolderCommand, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ContextMenu}}">
                         <MenuItem.Icon>
                             <imaging:CrispImage Width="16" Height="16" Moniker="{x:Static catalog:KnownMonikers.AddFolder}" />
                         </MenuItem.Icon>
                     </MenuItem>
-                    
+
                 </ContextMenu>
             </TreeView.ContextMenu>
 
@@ -67,7 +67,9 @@
 
                 <local:StateToBrushConverter x:Key="StateToBrushConverter" />
                 <local:TooltipConverter x:Key="TooltipConverter" />
-                
+                <local:StateToImageConverter x:Key="StateToImageConverter" />
+                <!--<local:StateToMonikerConverter x:Key="StateToMonikerConverter" />-->
+
                 <!--Folder-->
                 <HierarchicalDataTemplate DataType="{x:Type models:Folder}" ItemsSource="{Binding Items}">
                     <StackPanel Height="30" 
@@ -75,6 +77,7 @@
                                 Orientation="Horizontal"
                                 Background="Transparent"
                                 Tag="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type UserControl}}}">
+                        
                         <StackPanel.ContextMenu>
                             <ContextMenu>
 
@@ -121,7 +124,7 @@
                                         <imaging:CrispImage Width="16" Height="16" Moniker="{x:Static catalog:KnownMonikers.Stop}" />
                                     </MenuItem.Icon>
                                 </MenuItem>
-                                
+
                                 <Separator/>
 
                                 <MenuItem Header=" Delete" 
@@ -139,7 +142,7 @@
                                         <imaging:CrispImage Width="16" Height="16" Moniker="{x:Static catalog:KnownMonikers.Rename}" />
                                     </MenuItem.Icon>
                                 </MenuItem>
-                                
+
                                 <Separator/>
 
                                 <MenuItem Header=" Move Up"
@@ -157,13 +160,19 @@
                                         <imaging:CrispImage Width="16" Height="16" Moniker="{x:Static catalog:KnownMonikers.MoveDown}" />
                                     </MenuItem.Icon>
                                 </MenuItem>
-                                
+
                             </ContextMenu>
                         </StackPanel.ContextMenu>
 
                         <Rectangle Width="5" Fill="{Binding State, Converter={StaticResource StateToBrushConverter}}" Margin="0,0,5,0" />
 
+                        <imaging:CrispImage Height="16" 
+                                            Width="16" 
+                                            Margin="0,0,5,0"
+                                            Source="{Binding State, Converter={StaticResource StateToImageConverter}}"/>
+
                         <views:EditableTextBlock Text="{Binding Name}" 
+                                                 Margin="0,0,5,0"
                                                  FontWeight="Bold"
                                                  VerticalAlignment="Center"
                                                  HorizontalAlignment="Stretch"
@@ -178,13 +187,12 @@
                                 MinWidth="160"
                                 Height="30"
                                 Background="Transparent"
-                                
                                 Tag="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type UserControl}}}">
-                        
+
                         <StackPanel.ToolTip>
                             <TextBlock Text="{Binding Converter={StaticResource TooltipConverter}}" />
                         </StackPanel.ToolTip>
-                        
+
                         <StackPanel.ContextMenu>
                             <ContextMenu>
 
@@ -281,9 +289,9 @@
                                         <imaging:CrispImage Width="16" Height="16" Moniker="{x:Static catalog:KnownMonikers.CopyItem}" />
                                     </MenuItem.Icon>
                                 </MenuItem>
-                                
+
                                 <Separator/>
-                                
+
                                 <MenuItem Header=" Move Up"
                                           CommandParameter="{Binding}"
                                           Command="{Binding Path=PlacementTarget.Tag.DataContext.MoveUpCommand, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ContextMenu}}">
@@ -301,7 +309,7 @@
                                 </MenuItem>
 
                                 <Separator/>
-                                
+
                                 <MenuItem Header=" Properties" 
                                           Command="{Binding Path=PlacementTarget.Tag.DataContext.EditItemCommand, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ContextMenu}}"
                                           CommandParameter="{Binding}">
@@ -315,7 +323,13 @@
 
                         <Rectangle Width="5" Fill="{Binding State, Converter={StaticResource StateToBrushConverter}}" Margin="0,0,5,0" />
 
+                        <imaging:CrispImage Height="16" 
+                                            Width="16" 
+                                            Margin="0,0,5,0"
+                                            Source="{Binding State, Converter={StaticResource StateToImageConverter}}"/>
+
                         <views:EditableTextBlock Text="{Binding Name}"
+                                                 Margin="0,0,5,0"
                                                  VerticalAlignment="Center"
                                                  HorizontalAlignment="Stretch"
                                                  IsEditing="{Binding IsEditing}" 
@@ -330,6 +344,7 @@
                                 </Style>
                             </views:EditableTextBlock.Style>
                         </views:EditableTextBlock>
+
                     </StackPanel>
                 </DataTemplate>
 
