--- a/src/AnyStatus/Features/Options/OptionsDialogControl.xaml
+++ b/src/AnyStatus/Features/Options/OptionsDialogControl.xaml
@@ -24,6 +24,13 @@
                 </StackPanel>
             </GroupBox>
 
+            <GroupBox Header="User Experience" Padding="5" Margin="5">
+                <StackPanel>
+                    <CheckBox Margin="0,0,0,6" IsChecked="{Binding ShowStatusColors}">Show status colors</CheckBox>
+                    <CheckBox IsChecked="{Binding ShowStatusIcons}">Show status icons</CheckBox>
+                </StackPanel>
+            </GroupBox>
+
             <GroupBox Header="Restore Default Settings" Padding="5" Margin="5">
                 <StackPanel HorizontalAlignment="Left">
                     <TextBlock Margin="3">Note: This deletes all user-entered information</TextBlock>
