--- a/src/AnyStatus/Features/New/NewWindow.xaml
+++ b/src/AnyStatus/Features/New/NewWindow.xaml
@@ -1,19 +1,18 @@
-﻿<vsp:DialogWindow x:Class="AnyStatus.Views.NewWindow"
+﻿<vsp:DialogWindow x:Class="AnyStatus.NewWindow"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
              xmlns:vsp="clr-namespace:Microsoft.VisualStudio.PlatformUI;assembly=Microsoft.VisualStudio.Shell.14.0"
-             xmlns:local="clr-namespace:AnyStatus.Views"
-             xmlns:vm="clr-namespace:AnyStatus.ViewModels"
+             xmlns:local="clr-namespace:AnyStatus"
              xmlns:sys="clr-namespace:System;assembly=mscorlib"
              mc:Ignorable="d" 
              Height="450"
              Width="600"
              Title="Add New Item"
              WindowStartupLocation="CenterScreen"
-             d:DataContext="{d:DesignInstance Type=vm:NewViewModel}">
+             d:DataContext="{d:DesignInstance Type=local:NewViewModel}">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition MinWidth="150" Width="Auto"></ColumnDefinition>
