--- a/src/AnyStatus/Features/Options/OptionsDialogControl.xaml
+++ b/src/AnyStatus/Features/Options/OptionsDialogControl.xaml
@@ -1,10 +1,9 @@
-﻿<UserControl x:Class="AnyStatus.Views.OptionsDialogControl"
+﻿<UserControl x:Class="AnyStatus.OptionsDialogControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:AnyStatus.Views"
-             xmlns:vm="clr-namespace:AnyStatus.ViewModels"
+             xmlns:local="clr-namespace:AnyStatus"
              mc:Ignorable="d" 
              d:DesignHeight="500" d:DesignWidth="500">
 
