--- a/src/AnyStatus/Features/ToolWindow/ToolWindowControl.xaml
+++ b/src/AnyStatus/Features/ToolWindow/ToolWindowControl.xaml
@@ -1,11 +1,9 @@
-﻿<UserControl x:Class="AnyStatus.Views.ToolWindowControl"
+﻿<UserControl x:Class="AnyStatus.ToolWindowControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:AnyStatus"
-             xmlns:views="clr-namespace:AnyStatus.Views"
-             xmlns:vm="clr-namespace:AnyStatus.ViewModels"
              xmlns:vsp="clr-namespace:Microsoft.VisualStudio.PlatformUI;assembly=Microsoft.VisualStudio.Shell.14.0"
              xmlns:imaging="clr-namespace:Microsoft.VisualStudio.Imaging;assembly=Microsoft.VisualStudio.Imaging"
              xmlns:theming="clr-namespace:Microsoft.VisualStudio.PlatformUI;assembly=Microsoft.VisualStudio.Imaging"
@@ -14,7 +12,7 @@
              mc:Ignorable="d" 
              d:DesignHeight="300"
              d:DesignWidth="300"
-             d:DataContext="{d:DesignInstance Type=vm:ToolWindowViewModel}"
+             d:DataContext="{d:DesignInstance Type=local:ToolWindowViewModel}"
              x:Name="ToolWindow">
     <UserControl.Resources>
         <utilities:BrushToColorConverter x:Key="BrushToColorConverter"/>
@@ -193,7 +191,7 @@
                             </imaging:CrispImage.Style>
                         </imaging:CrispImage>
 
-                        <views:EditableTextBlock Text="{Binding Name}" 
+                        <local:EditableTextBlock Text="{Binding Name}" 
                                                  Margin="5,0,5,0"
                                                  FontWeight="Bold"
                                                  VerticalAlignment="Center"
@@ -374,22 +372,22 @@
                         </imaging:CrispImage>
 
 
-                        <views:EditableTextBlock Text="{Binding Name}"
+                        <local:EditableTextBlock Text="{Binding Name}"
                                                  Margin="5,0,5,0"
                                                  VerticalAlignment="Center"
                                                  HorizontalAlignment="Stretch"
                                                  IsEditing="{Binding IsEditing}" 
                                                  SaveCommand="{Binding DataContext.SaveCommand, ElementName=ToolWindow}">
-                            <views:EditableTextBlock.Style>
-                                <Style TargetType="{x:Type views:EditableTextBlock}">
+                            <local:EditableTextBlock.Style>
+                                <Style TargetType="{x:Type local:EditableTextBlock}">
                                     <Style.Triggers>
                                         <DataTrigger Binding="{Binding Path=IsEnabled}" Value="False">
                                             <Setter Property="Foreground" Value="Silver"></Setter>
                                         </DataTrigger>
                                     </Style.Triggers>
                                 </Style>
-                            </views:EditableTextBlock.Style>
-                        </views:EditableTextBlock>
+                            </local:EditableTextBlock.Style>
+                        </local:EditableTextBlock>
 
                     </StackPanel>
                 </DataTemplate>
