--- a/src/AnyStatus/Features/Options/General/GeneralOptionsView.xaml
+++ b/src/AnyStatus/Features/Options/General/GeneralOptionsView.xaml
@@ -1,8 +1,9 @@
-﻿<UserControl x:Class="AnyStatus.OptionsDialogControl"
+﻿<UserControl x:Class="AnyStatus.GeneralOptionsView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
              xmlns:local="clr-namespace:AnyStatus"
              mc:Ignorable="d" 
              d:DesignHeight="500" d:DesignWidth="500">
@@ -23,10 +24,10 @@
                 </StackPanel>
             </GroupBox>
 
-            <GroupBox Header="User Experience" Padding="5" Margin="5">
-                <StackPanel>
-                    <CheckBox Margin="0,0,0,6" IsChecked="{Binding ShowStatusColors}">Show status colors</CheckBox>
-                    <CheckBox IsChecked="{Binding ShowStatusIcons}">Show status icons</CheckBox>
+            <GroupBox Header="Import and Export Settings" Padding="5" Margin="5">
+                <StackPanel Orientation="Horizontal">
+                    <Button Command="{Binding ImportSettingsCommand}" Width="70" Margin="3">Import...</Button>
+                    <Button Command="{Binding ExportSettingsCommand}" Width="70" Margin="3">Export...</Button>
                 </StackPanel>
             </GroupBox>
 
@@ -37,13 +38,6 @@
                 </StackPanel>
             </GroupBox>
 
-            <GroupBox Header="Import and Export Settings" Padding="5" Margin="5">
-                <StackPanel Orientation="Horizontal">
-                    <Button Command="{Binding ImportSettingsCommand}" Width="70" Margin="3">Import...</Button>
-                    <Button Command="{Binding ExportSettingsCommand}" Width="70" Margin="3">Export...</Button>
-                </StackPanel>
-            </GroupBox>
-           
         </StackPanel>
     </ScrollViewer>
 </UserControl>
